# rauncher-test

./: .rustfmt.toml  Cargo.toml  GUI_MOCKUP.txt  LICENSE  OAUTH_IMPLEMENTATION.md  README.md  TODO.md  VISUAL_COMPARISON.md  audit.toml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/games/: mod.rs
src/gui/: app.rs  auth_view.rs  library_view.rs  mod.rs  styles.rs
src/gui/components/: game_card.rs  header.rs  mod.rs  search_bar.rs  status_bar.rs
tests/: integration_tests.rs
