[package]
name = "r-games-launcher"
version = "0.1.0"
edition = "2021"
authors = ["R Games Launcher Contributors"]
description = "An Epic Games launcher for Linux written in Rust"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
directories = "5.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png", "jpeg"] }
poll-promise = "0.3"
webbrowser = "1.0.6"
